캐시 전략 수정